--- a/Login/index.html
+++ b/Login/index.html
@@ -42,7 +42,7 @@
                     <form action="">
                         <label for="form__localization">wybierz swoją lokalizację:</label>
                         <select id="form__localization" name="form__localization">
-                            <option>Szczecinek / Szczecinecki System Roweru Miejskiego</option>
+                            <option>SZCZECINEK / Szczecinecki System Roweru Miejskiego</option>
                         </select>
                         <div class="input--wrapper d-flex flex-column flex-lg-row  justify-content-between">
                             <div class="input--wrapper2">
@@ -55,9 +55,10 @@
                             </div>
                         </div>
                         <div class="button--wrapper">
+                            <p class="form--p">Nie pamiętam hasla</p>
                             <button class="button button--success">ZALOGUJ →</button>
                         </div>
-                        <p>Nie pamiętam hasla</p>
+
                     </form>
 
                 </div>
@@ -103,10 +104,10 @@
         </main>
         <footer>
             <div class="row">
-                <div class="col-md-1 footer__logo1">
+                <div class="col-md-1 col-2 footer__logo1">
                     <img class="" src="../assets/img/polski-rower.png" alt="Polski Rower">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4 col-5">
                     <p class="footer--p">BikeU Sp. z o. o.
                         <br/>ul. Emilii Plater 53,
                         <br/> 00-113 Warszawa
@@ -115,7 +116,7 @@
                         <br/> email: bok@polskirowermiejski.pl
                     </p>
                 </div>
-                <div class="col-md-2 offset-5 footer__logo2">
+                <div class="col-md-1 col-3 offset-md-5 footer__logo2">
                     <img src="../assets/img/logo.png" alt="FilFri">
                 </div>
             </div>
