--- a/Login/index.html
+++ b/Login/index.html
@@ -56,24 +56,24 @@
                         </div>
                         <div class="button--wrapper">
                             <p class="form--p">Nie pamiętam hasla</p>
-                            <button class="button button--success">ZALOGUJ →</button>
+                            <button class="button button--success">ZALOGUJ <span class="button--arrow">→</span></button>
                         </div>
 
                     </form>
 
                 </div>
-                <div class="col-md-5 main__registration">
+                <div class="col-md-4 main__registration">
                     <h2 class="registration--h2">REJESTRACJA</h2>
                     <p class="registration--p">Aby korzystać z Systemu Roweru Publicznego Filfri Bikes musisz przejść proces rejestracji.
                         <br/>
                         <br/>Zrób to klikając przycisk
                         <span class="font--bold">“Utwórz konto”</span>.
                     </p>
-                    <button class="button button--info">UTWÓRZ KONTO →</button>
+                    <button class="button button--info">UTWÓRZ KONTO <span class="button--arrow">→</span></button>
                 </div>
             </div>
             <div class="row main__info">
-                <div class="col-md-2">
+                <div class="col-md-1">
                     <h2 class="info--h2">Zapoznaj się z naszym systemem </h2>
                 </div>
                 <div class="col-md-6">
@@ -81,7 +81,7 @@
                         i hoteli. Zaprojektowaliśmy go tak aby wszystkie czynności które ma do wykonania użytkownik systemu
                         – rejestracja, wypożyczenie i zwrot były możliwie najprostsze</p>
                 </div>
-                <div class="col-md-4 d-flex justify-content-sm-center">
+                <div class="col-md-5 d-flex justify-content-center">
                     <ul class="info__list">
                         <li class="info__list-item">
                             <a href="#">Cennik</a>
