--- a/Login/index.html
+++ b/Login/index.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="button--wrapper">
-                            <p class="form--p">Nie pamiętam hasla</p>
+                            <p class="form--p">Nie pamiętam hasła</p>
                             <button class="button button--success">ZALOGUJ <span class="button--arrow">→</span></button>
                         </div>
 
