jira problems solved

--- a/Login/index.html
+++ b/Login/index.html
@@ -11,7 +11,7 @@
     <title>Logowanie</title>
 </head>
 
-<body>
+<body class="body--background">
     <div class="container">
         <header>
             <div class="row">
@@ -28,9 +28,9 @@
                         <span class="font--middle">+48</span> 86 222 34 88</p>
                 </div>
                 <div class="col-md-2 d-flex align-self-end justify-content-end">
-                    <img class="header__flag" src="../assets/img/pl.png" alt="polish language">
-                    <img class="header__flag" src="../assets/img/en.png" alt="english language">
-                    <img class="header__flag" src="../assets/img/no.png" alt="norwegian language">
+                    <a class="header__flag" href="#"><img src="../assets/img/pl.png" alt="polish language"></a>
+                    <a class="header__flag" href="#"><img src="../assets/img/en.png" alt="english language"></a>
+                    <a class="header__flag" href="#"><img src="../assets/img/no.png" alt="norwegian language"></a>
                 </div>
 
             </div>
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="button--wrapper">
-                            <p class="form--p">Nie pamiętam hasła</p>
+                            <a href="#"><p class="form--p">Nie pamiętam hasła</p></a>
                             <button class="button button--success">ZALOGUJ <span class="button--arrow">→</span></button>
                         </div>
 
