--- a/Terms/index.html
+++ b/Terms/index.html
@@ -28,9 +28,9 @@
                         <span class="font--middle">+48</span> 86 222 34 88</p>
                 </div>
                 <div class="col-md-2 d-flex align-self-end justify-content-end">
-                    <img class="header__flag" src="../assets/img/pl.png" alt="polish language">
-                    <img class="header__flag" src="../assets/img/en.png" alt="english language">
-                    <img class="header__flag" src="../assets/img/no.png" alt="norwegian language">
+                    <a class="header__flag" href="#"><img src="../assets/img/pl.png" alt="polish language"></a>
+                    <a class="header__flag" href="#"><img src="../assets/img/en.png" alt="english language"></a>
+                    <a class="header__flag" href="#"><img src="../assets/img/no.png" alt="norwegian language"></a>
                 </div>
 
             </div>
